se agregó la fecha a la application

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="card">
       <div class="search-box">
-        <input type="text" class="search-bar" placeholder="Buscar" />
+        <input type="text" id="search" class="search-bar" placeholder="Buscar" />
         <button class="btn-search">
           <svg
             stroke="currentColor"
@@ -42,6 +42,7 @@
         </div>
         <div class="humidity">Humedad</div>
         <div class="wind">Velocidad de Viento</div>
+        <div class="date">Fecha: </div>
       </div>
       <p class="footer">by Salvador Porras</p>
     </div>
