se agregó la función para limpiar el input

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="card">
       <div class="search-box">
-        <input type="text" id="search" class="search-bar" placeholder="Buscar" />
+        <input type="text" id="search-bar" class="search-bar" placeholder="Buscar" />
         <button class="btn-search">
           <svg
             stroke="currentColor"
